  * Disable the '/sharedfolder/<xyz>' feature by default on new
    installations because it makes too much problems.
    It can be enabled by setting the environment variable to
    'OMV_SHAREDFOLDERS_DIR_ENABLED="YES"'. Finally run the command
    'omv-salt stage run prepare' to apply the modified default values
    and 'omv-salt deploy run systemd' to create the unit files.
  * Issue #604: Wrong primary slave configuration for bond network
    interfaces.
  * Issue #605: Memory usage wrong in Dashboard and system information
    pages.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 16 Feb 2020 13:54:00 +0100

openmediavault (5.3.2-1) unstable; urgency=low

  * Update locales.
  * Fix issue in the S.M.A.R.T. scheduled tests page.
  * Issue #601: Error listing mount points when using BTRFS subvolumes.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Feb 2020 13:20:00 +0100

openmediavault (5.3.1-1) unstable; urgency=low

  * Update locales.
  * Various improvements in the PHP and Python storage device backends.
  * Issue #597: Disable sorting of the column 'Device(s)' in the
    filesystem table.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 10 Feb 2020 14:27:27 +0100

openmediavault (5.3.0-1) unstable; urgency=low

  * Update locales.
  * Add right-to-left (RTL) support. Thanks to Abo Khalid.
  * Refactor Python openmediavault.device.* classes. A plugin
    infrastructure has been established to be able to add
    support for additional storage backends.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 07 Feb 2020 00:06:29 +0100

openmediavault (5.2.7-1) unstable; urgency=low

  * Update locales.
  * Fix issue in systemd-networkd configuration. Remove unknown 'UseDNS'
    option in 'Network' section.
  * Fix network bond configuration issue. Relocate PrimarySlave to
    systemd.network.
  * Fix \OMV\System\Filesystem\Filesystem::getImplByMountPoint() method.
  * Issue #579: Add arabic translations.
