@@ -7,6 +7,7 @@ openmediavault (5.3.3-1) unstable; urgency=low
     'OMV_SHAREDFOLDERS_DIR_ENABLED="YES"'. Finally run the command
     'omv-salt stage run prepare' to apply the modified default values
     and 'omv-salt deploy run systemd' to create the unit files.
+  * Issue #163: Apply hdparm.conf settings at runtime.
   * Issue #604: Wrong primary slave configuration for bond network
     interfaces.
   * Issue #605: Memory usage wrong in Dashboard and system information
